Added !pip install cmd to run from google collab

--- a/Damping_a_triple_pendulum.ipynb
+++ b/Damping_a_triple_pendulum.ipynb
@@ -49,6 +49,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#needed if running from google collab\n",
+    "!pip install control"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "tags": []
