Small fix on markdown

--- a/Damping_a_triple_pendulum.ipynb
+++ b/Damping_a_triple_pendulum.ipynb
@@ -173,11 +173,7 @@
     "id": "1txfKbMpus1m"
    },
    "source": [
-    "### Compare the ground-to-mirror transfer function with the one you concatenated:\n",
-    "Most important things that have to match:\n",
-    "* DC level (0 Hz) asymptotic to ~ 1\n",
-    "* Number and frequency of resonance peaks\n",
-    "* Suppression steepness above the highest resonance peak.  "
+    "### Visualize the ground-to-mirror transfer function\n"
    ]
   },
   {
