Added solutions and missing variable in student notebook

--- a/Damping_a_triple_pendulum-solved.ipynb
+++ b/Damping_a_triple_pendulum-solved.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "id": "FTCRfNs0us1l",
     "tags": []
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "id": "Mo96bu9zus1o",
     "outputId": "3abe1f6e-1ceb-40ae-bbd1-54d11c227ec8"
@@ -274,7 +274,7 @@
        "Text(0.5, 0, 'Frequency [Hz]')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "id": "m_RKUzerus1p"
    },
@@ -320,23 +320,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "tVbScuy9us1p",
     "outputId": "612aa8cd-c5db-40d1-bfff-4904ccd45e22"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Platform motion rms = 1.5187e-08 m\n",
+      "Mirror motion rms = 3.6437e-08 m\n"
+     ]
+    }
+   ],
    "source": [
     "#Project the noise to the mirror and compute RMS motion of platform and mirror: \n",
-    "mirr_motion_undamped = \n",
+    "mirr_motion_undamped = platform_motion*np.squeeze(p_to_m_sampled.magnitude)\n",
     "\n",
-    "platform_motion_rms = \n",
-    "mirr_motion_undamped_rms = "
+    "platform_motion_rms = cumulative_rms(platform_motion, freqs)\n",
+    "mirr_motion_undamped_rms = cumulative_rms(mirr_motion_undamped, freqs)\n",
+    "\n",
+    "print(f'Platform motion rms = {platform_motion_rms[0]:.4e} m')\n",
+    "print(f'Mirror motion rms = {mirr_motion_undamped_rms[0]:.4e} m')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "id": "sJM51oOJus1p",
     "outputId": "448a7edb-51d1-4133-c9b9-3ea16ed2ac8e"
@@ -409,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "id": "4QUIskccus1q"
    },
@@ -432,53 +444,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "UVPBJ1Smus1q",
     "tags": []
    },
    "outputs": [],
    "source": [
-    "control_m3 = control.zpk([],[], )\n",
+    "control_m3 = control.zpk([-0.2, -0.2, -0.3],[0, -25, -15, -25], 500000)\n",
     "\n",
     "# Actuation on mirror:\n",
-    "open_loop_m3_act =\n",
-    "controlled_plant_m3_act =\n",
-    "closed_loop_m3_act ="
+    "open_loop_m3_act = f_to_d_m3 * control_m3 # Assuming sensing directly on M3 and torque actuation on M3\n",
+    "controlled_plant_m3_act = f_to_d_m3 /(1 + open_loop_m3_act)\n",
+    "closed_loop_m3_act = open_loop_m3_act /(1 + open_loop_m3_act)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "metadata": {
     "id": "zGTOiheQus1q",
     "outputId": "30ca911f-6587-4246-a7d9-3948c2fd3a2a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "(3.199024365971392, -38.97879612543525, 0.5147287374567066, 36.530428952723156, 1.5131543801113787, 26.586403571066104)\n"
+     ]
+    }
+   ],
    "source": [
     "# Check stability and margins:\n",
-    "# use control.stability_margins()\n"
+    "# use control.stability_margins()\n",
+    "is_stable(controlled_plant_m3_act)\n",
+    "print(control.stability_margins(open_loop_m3_act)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "id": "H-JwBKWvus1r"
    },
    "outputs": [],
    "source": [
     "# Sample the Transfer functions for the plotting:\n",
-    "control_m3_sampled = \n",
-    "open_loop_m3_act_sampled = \n",
-    "closed_loop_m3_act_sampled = \n",
-    "plant_m3_sampled = \n",
-    "controlled_plant_m3_act_sampled = "
+    "control_m3_sampled = control.frequency_response(control_m3, Omega_Array)\n",
+    "open_loop_m3_act_sampled = control.frequency_response(open_loop_m3_act, Omega_Array)\n",
+    "closed_loop_m3_act_sampled = control.frequency_response(closed_loop_m3_act, Omega_Array)\n",
+    "plant_m3_sampled = control.frequency_response(f_to_d_m3, Omega_Array)\n",
+    "controlled_plant_m3_act_sampled = control.frequency_response(controlled_plant_m3_act, Omega_Array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "id": "EuFlPWy9us1r",
     "outputId": "ed9da6b5-8ba3-4fbc-c237-287af95c306d"
@@ -556,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "id": "klT4dsDfus1s",
     "tags": []
@@ -564,30 +587,41 @@
    "outputs": [],
    "source": [
     "# Control filter to apply directly to the mirror\n",
-    "control_m1 = control.zpk([],[],)\n",
+    "control_m1 = control.zpk([-0.1, -0.1],[0, -25, -25], 100000)\n",
     "\n",
     "# Actuation on pem (m2):\n",
-    "open_loop_m1_act =\n",
-    "closed_loop_m1_act =\n",
-    "controlled_plant_m1_act ="
+    "open_loop_m1_act = f_to_d_m1 * control_m1 # Assuming sensing directly on M3 and torque actuation on M2\n",
+    "closed_loop_m1_act = open_loop_m1_act/(1 + open_loop_m1_act)\n",
+    "controlled_plant_m1_act = f_to_d_m1 /(1 + open_loop_m1_act)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "metadata": {
     "id": "0m1lBnEjus1s",
     "outputId": "852e341b-c3b4-46c1-851e-db6fda1e42d1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "(3.168619468504257, 23.118537293773358, 0.3613063192857534, 24.800434328852806, 16.292625352184615, 17.200495267945037)\n"
+     ]
+    }
+   ],
    "source": [
     "# Check stability and margins:\n",
-    "#use control.stability_margins()\n"
+    "#use control.stability_margins()\n",
+    "is_stable(controlled_plant_m1_act)\n",
+    "print(control.stability_margins(open_loop_m1_act))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "id": "2BzcYJhfus1s"
    },
@@ -595,16 +629,16 @@
    "source": [
     "# Sample the Transfer functions for the plotting:\n",
     "\n",
-    "control_m1_sampled = \n",
-    "open_loop_m1_act_sampled = \n",
-    "closed_loop_m1_act_sampled =\n",
-    "controlled_plant_m1_act_sampled = \n",
-    "plant_m1_sampled = "
+    "control_m1_sampled = control.frequency_response(control_m1, Omega_Array)\n",
+    "open_loop_m1_act_sampled = control.frequency_response(open_loop_m1_act, Omega_Array)\n",
+    "closed_loop_m1_act_sampled = control.frequency_response(closed_loop_m1_act, Omega_Array)\n",
+    "controlled_plant_m1_act_sampled = control.frequency_response(controlled_plant_m1_act, Omega_Array)\n",
+    "plant_m1_sampled = control.frequency_response(f_to_d_m1, Omega_Array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {
     "id": "Zq4FuFJcus1s",
     "outputId": "b94c4985-d225-4254-fc03-d3bd98da60f9"
@@ -654,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {
     "id": "JG3jqh-Qus1t",
     "outputId": "1f4737b2-528b-44bd-c448-a8095ac5257f"
@@ -706,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "id": "Bt8bHDFVus1t",
     "tags": []
@@ -714,14 +748,13 @@
    "outputs": [],
    "source": [
     "# Ground to mirror TF\n",
-    "\n",
-    "platform_motion_tf_m1_act =\n",
-    "platform_motion_tf_m3_act ="
+    "platform_motion_tf_m1_act =  gnd_to_m3/ (1 + open_loop_m1_act)\n",
+    "platform_motion_tf_m3_act =  gnd_to_m3/ (1 + open_loop_m3_act)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "id": "WYwkvFCUus1t",
     "tags": []
@@ -729,13 +762,13 @@
    "outputs": [],
    "source": [
     "# Sample the Transfer functions for the plotting:\n",
-    "p_to_m_m1_act_sampled = \n",
-    "p_to_m_m3_act_sampled = "
+    "p_to_m_m1_act_sampled = control.frequency_response(platform_motion_tf_m1_act, Omega_Array)\n",
+    "p_to_m_m3_act_sampled = control.frequency_response(platform_motion_tf_m3_act, Omega_Array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 44,
    "metadata": {
     "id": "p1xqXtSIus1t",
     "outputId": "19b1eb96-4745-4ad5-9674-f737f4580f3e",
@@ -785,34 +818,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "id": "XACYZNWIus1u"
    },
    "outputs": [],
    "source": [
     "#Project the noises:\n",
-    "mirr_motion_damped_m1_act =\n",
-    "mirr_motion_damped_m3_act =\n"
+    "mirr_motion_damped_m1_act = platform_motion*np.squeeze(p_to_m_m1_act_sampled.magnitude)\n",
+    "mirr_motion_damped_m3_act = platform_motion*np.squeeze(p_to_m_m3_act_sampled.magnitude)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "id": "ZnnBEDc5us1u",
     "outputId": "50d40589-32d3-469b-a5ef-7fd71fed3ec7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Platform motion rms = 1.5187e-08 m\n",
+      "Mirror motion rms (undamped) = 3.6437e-08 m\n",
+      "Mirror motion rms (damped on M3) = 2.1927e-08 m\n",
+      "Mirror motion rms (damped on M1) = 1.6637e-08 m\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute and print the residual motion RMSs\n",
-    "mirr_motion_damped_m3_rms = \n",
-    "mirr_motion_damped_m1_rms = "
+    "mirr_motion_damped_m3_rms = cumulative_rms(mirr_motion_damped_m3_act, freqs)\n",
+    "mirr_motion_damped_m1_rms = cumulative_rms(mirr_motion_damped_m1_act, freqs)\n",
+    "\n",
+    "print(f'Platform motion rms = {platform_motion_rms[0]:.4e} m')\n",
+    "print(f'Mirror motion rms (undamped) = {mirr_motion_undamped_rms[0]:.4e} m')\n",
+    "print(f'Mirror motion rms (damped on M3) = {mirr_motion_damped_m3_rms[0]:.4e} m')\n",
+    "print(f'Mirror motion rms (damped on M1) = {mirr_motion_damped_m1_rms[0]:.4e} m')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -904,36 +953,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "id": "bPTfD5yjus1v",
     "outputId": "e9dafd34-1041-4b76-c4f4-b5bb9018bc2f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 states have been removed from the model\n",
+      "10 states have been removed from the model\n"
+     ]
+    }
+   ],
    "source": [
     "# Sensing noise TFs\n",
     "# HINT: use control.minreal() to simplify zeros and poles and reduce numerical issues\n",
-    "sens_noise_tf_m1_act =\n",
-    "sens_noise_tf_m3_act ="
+    "sens_noise_tf_m1_act = control.minreal(- open_loop_m1_act / (1 + open_loop_m1_act) * m1_to_m3,1e-2)\n",
+    "sens_noise_tf_m3_act = control.minreal(- open_loop_m3_act / (1 + open_loop_m3_act),1e-2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "id": "fzilMRMxus1v"
    },
    "outputs": [],
    "source": [
     "# Sample the sensing noise transfer functions and compute the residual noise ASDs\n",
-    "\n",
-    "sens_noise_tf_m1_act_sampled = \n",
-    "sens_noise_tf_m3_act_sampled = "
+    "sens_noise_tf_m1_act_sampled = control.frequency_response(sens_noise_tf_m1_act, Omega_Array)\n",
+    "sens_noise_tf_m3_act_sampled = control.frequency_response(sens_noise_tf_m3_act, Omega_Array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "id": "Jho6hnO0us1v"
    },
@@ -941,12 +998,12 @@
    "source": [
     "#Enhanced BOSEM shadow sensors can reach  the extreme sensitivity of a flat 5e-11 m/sqrt(Hz) spectra over the whole suspension control bandwidth.\n",
     "# Let's use this as our sensor self_noise\n",
-    "self_noise = "
+    "self_noise = 5e-11 * np.ones_like(freqs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "id": "t59Urxs8us1v",
     "tags": []
@@ -954,12 +1011,12 @@
    "outputs": [],
    "source": [
     "# Total sensing noise:\n",
-    "sensing_noise ="
+    "sensing_noise = np.sqrt(self_noise**2 + platform_motion**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "id": "qA9ChZvGus1v",
     "tags": []
@@ -967,32 +1024,49 @@
    "outputs": [],
    "source": [
     "# Project the sensing noise\n",
-    "sensing_noise_m1_act_projected =\n",
-    "sensing_noise_m3_act_projected =\n",
+    "sensing_noise_m1_act_projected = sensing_noise*np.squeeze(sens_noise_tf_m1_act_sampled.magnitude)\n",
+    "sensing_noise_m3_act_projected = sensing_noise*np.squeeze(sens_noise_tf_m3_act_sampled.magnitude)\n",
+    "\n",
     "\n",
     "# Compute the total noise including residual motion ASD of platform motion and sensing noise contributions to mirror motion\n",
-    "total_noise_m1_act =\n",
-    "total_noise_m3_act ="
+    "total_noise_m1_act = np.sqrt(mirr_motion_damped_m1_act**2 + sensing_noise_m1_act_projected**2)\n",
+    "total_noise_m3_act = np.sqrt(mirr_motion_damped_m3_act**2 + sensing_noise_m3_act_projected**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "id": "WJvSnZh7us1v",
     "outputId": "133a6a8d-dd7c-41d5-b5da-3768d0de855d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Platform motion rms = 1.5187e-08 m\n",
+      "Mirror motion rms (undamped) = 3.6437e-08 m\n",
+      "Mirror motion rms (damped on M3) with sensing noise = 2.3373e-08 m\n",
+      "Mirror motion rms (damped on M1) with sensing noise = 1.6637e-08 m\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute and print the RMSs\n",
     "\n",
-    "total_noise_m3_act_rms = \n",
-    "total_noise_m1_act_rms = \n"
+    "total_noise_m3_act_rms = cumulative_rms(total_noise_m3_act, freqs)\n",
+    "total_noise_m1_act_rms = cumulative_rms(total_noise_m1_act, freqs)\n",
+    "\n",
+    "print(f'Platform motion rms = {platform_motion_rms[0]:.4e} m')\n",
+    "print(f'Mirror motion rms (undamped) = {mirr_motion_undamped_rms[0]:.4e} m')\n",
+    "print(f'Mirror motion rms (damped on M3) with sensing noise = {total_noise_m3_act_rms[0]:.4e} m')\n",
+    "print(f'Mirror motion rms (damped on M1) with sensing noise = {total_noise_m1_act_rms[0]:.4e} m')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 68,
    "metadata": {
     "id": "4nuD2fkPus1w",
     "outputId": "104b32b8-912b-4906-c996-c451f24c4d2a",
@@ -1040,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 70,
    "metadata": {
     "id": "X-eiNfVaus1w",
     "outputId": "ec6130b0-4c42-4e63-ff1c-1f3a18377ca5",
