Added missing variables in first exercise

--- a/Damping_a_triple_pendulum.ipynb
+++ b/Damping_a_triple_pendulum.ipynb
@@ -320,14 +320,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "id": "tVbScuy9us1p",
     "outputId": "612aa8cd-c5db-40d1-bfff-4904ccd45e22"
    },
    "outputs": [],
    "source": [
-    "#Project the noise to the mirror and compute RMS motion of platform and mirror: \n"
+    "#Project the noise to the mirror and compute RMS motion of platform and mirror: \n",
+    "mirr_motion_undamped = \n",
+    "\n",
+    "platform_motion_rms = \n",
+    "mirr_motion_undamped_rms = "
    ]
   },
   {
