Added fpath variable to open file on google collab from github

--- a/Damping_a_triple_pendulum-solved.ipynb
+++ b/Damping_a_triple_pendulum-solved.ipynb
@@ -290,7 +290,9 @@
     }
    ],
    "source": [
-    "freqs, platform_motion = np.loadtxt('ISInoise.txt')\n",
+    "#fpath = '/content/triple_suspension/ISInoise.txt'\n",
+    "fpath = 'ISInoise.txt'\n",
+    "freqs, platform_motion = np.loadtxt(fpath)\n",
     "\n",
     "# Check that freqs matches the above defined frequency array:\n",
     "print(np.allclose(freqs, Frequency_Array, 1e-5))\n",
